--- a/src/Email.css
+++ b/src/Email.css
@@ -1,8 +1,8 @@
 .email {
-  background-color: lightgrey;
-  top: 120px;
-  box-shadow: 5px 5px 30px grey;
-  border-radius: 10px;
+  background-color: white;
+  top: 135px;
+  /* box-shadow: 5px 5px 30px grey; */
+  /* border-radius: 10px; */
   width: 100%;
   position: absolute;
   z-index: 2;
@@ -10,11 +10,11 @@
 }
 
 .widget {
-  background-color: lightgrey;
-  top: 120px;
+  background-color: white;
+  top: 140px;
 
-  box-shadow: 5px 5px 30px grey;
-  border-radius: 10px;
+  /* box-shadow: 5px 5px 30px grey; */
+  /* border-radius: 10px; */
   width: 340px;
   position: absolute;
   z-index: 1;
