--- a/src/ListItem.css
+++ b/src/ListItem.css
@@ -1,6 +1,6 @@
 .ListItem {
-  height: 141px;
-  background-color: lightgrey;
+  height: 145px;
+  background-color: white;
   width: 365px;
 
   border-radius: 10px;
@@ -16,6 +16,7 @@
   border-radius: 50%;
   object-fit: cover;
   float: left;
+  border: 1px solid black;
 }
 .name {
   margin-top: 10px;
@@ -30,10 +31,36 @@
 }
 .price {
   font-family: 'Lato', sans-serif;
+  position: absolute;
+  right: 8px;
+  margin-top: 0px;
+  padding-right: 5px;
+  font-size: 17px;
+  float: right;
+}
+.button {
+  font-family: 'Lato', sans-serif;
   text-align: right;
+  border-radius: 8px;
   margin-top: 5px;
   margin: 10px 10px 10px 10px;
   font-size: 13px;
   cursor: pointer;
+  border: 1px solid white;
   float: right;
+  color: white;
+  background-color: rgb(0, 107, 255);
+}
+.hideLabel {
+  opacity: 0;
+}
+.per {
+  font-family: 'Lato', sans-serif;
+  text-align: right;
+  float: right;
+  font-size: 10px;
+  margin: 0px;
+  position: absolute;
+  right: 2px;
+  padding: 1px;
 }
